crates/ir/tests/snapshots/lower_test__stdlib__prelude_option_codegen.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module stdlib__prelude_option_codegen

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[y8]): List[y8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
declare println: (s) -> Unit

fn unwrap_or(v0: Option[l9], v1: l9) -> l9 =
  switch v0 {
    0 (v2: l9) ->
      v2
    1 ->
      v1
  }

fn main() -> Unit =
  let v4: ~Option[Int] = construct Option::Some#0(42)
  let v5: Int = call unwrap_or(v4, 0)
  let v3: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v6: Unit = call println(v3, v5)
  v6
