crates/ir/tests/snapshots/lower_test__stdlib__question_mark_option_basic.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module stdlib__question_mark_option_basic

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/option/None as None(): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
import core/list/Nil as Nil(): List[h]
import core/ordering/LT as LT(): Ordering
import core/ordering/EQ as EQ(): Ordering
import core/ordering/GT as GT(): Ordering
declare println: (o) -> Unit

fn lookup(v0: Int) -> Option[Int] =
  let v1: ~Option[Int] = construct Option::Some#0(v0)
  v1

fn process(v2: Int) -> Option[Int] =
  let_join v3(v4: Option[Int]) =
    v4
  in
  let_join v11(v5: Int) =
    let v9: Int = mul_int(v5, 2)
    let v10: ~Option[Int] = construct Option::Some#0(v9)
    v10
  in
  let v6: Option[Int] = call lookup(v2)
  switch v6 {
    0 (v7: Int) ->
      jump v11(v7)
    1 ->
      let v8: Option[Int] = construct Option::None#1()
      jump v3(v8)
  }

fn main() -> Unit =
  let v12: Option[Int] = call process(21)
  switch v12 {
    0 (v13: Int) ->
      let v14: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v15: Unit = call println(v14, v13)
      v15
    1 ->
      let v16: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v17: Unit = call println(v16, 0)
      v17
  }
