crates/ir/tests/snapshots/lower_test__stdlib__question_mark_option_chain.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module stdlib__question_mark_option_chain

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
declare println: (o) -> Unit

fn first(v0: Int) -> Option[Int] =
  let v1: ~Option[Int] = construct Option::Some#0(v0)
  v1

fn second(v2: s8) -> Option[Int] =
  let v3: ~Option[Int] = construct Option::None#1()
  v3

fn process(v4: Int) -> Option[Int] =
  let_join v5(v6: Option[Int]) =
    v6
  in
  let_join v17(v7: Int) =
    let_join v16(v11: Int) =
      let v15: ~Option[Int] = construct Option::Some#0(v11)
      v15
    in
    let v12: Option[Int] = call second(v7)
    switch v12 {
      0 (v13: Int) ->
        jump v16(v13)
      1 ->
        let v14: Option[Int] = construct Option::None#1()
        jump v5(v14)
    }
  in
  let v8: Option[Int] = call first(v4)
  switch v8 {
    0 (v9: Int) ->
      jump v17(v9)
    1 ->
      let v10: Option[Int] = construct Option::None#1()
      jump v5(v10)
  }

fn main() -> Unit =
  let v18: Option[Int] = call process(21)
  switch v18 {
    0 (v19: Int) ->
      let v20: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v21: Unit = call println(v20, v19)
      v21
    1 ->
      let v22: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v23: Unit = call println(v22, 0)
      v23
  }
